feat(auth): implement secure credential management system
- Add authentication service integration
- Implement CRUD operations for credentials
- Add password generation functionality
- Integrate password breach checking via HaveIBeenPwned API
- Implement secure clipboard operations for passwords
- Add encryption/decryption service integration

Security: This implementation follows security best practices by:
- Encrypting stored passwords
- Using secure password generation
- Implementing breach detection
- Avoiding plain text password exposure